# pyotc

./: .gitignore  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  INSTALL.md  INSTALL.rst  LICENSE  Makefile  README.md  README.rst  RELEASE.md  noxfile.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: README.md  build_and_publish.yml  build_and_test.yml  build_wheels.yml  documentation.yml  nox.yml  publish.yml  static.yml
docs/: Makefile  conf.py  index.rst  installation.rst  pyproject.toml
docs/joss/: paper.bib  paper.md
notebooks/: EntropicOTC.ipynb  EntropicOTC.py  MarkovProcesses.ipynb  NETOTCExampleCode.ipynb  NetworkExamples.ipynb  POT_TimeComparison.ipynb  Sparse.ipynb  data_modeling_example.ipynb  entropic otc.ipynb  entropic.ipynb  entropic_otc.ipynb  entropic_otc.py  exact_otc.py  examples.ipynb  network_examples.ipynb  pyotc_demo.ipynb  sparse.ipynb  sparse.py  sparse_vs_exact.ipynb  utils.py
notebooks/class_based_experiment/: OTC.py  driver.ipynb
notebooks/original/: NetOTC.py
pyotc/: otc.py
pyotc/otc/exact/: jmlr.py
pyotc/otc_backend/optimal_transport/: native.py
pyotc/otc_backend/policy_interation/: tce.py
pyotc/otc_backend/policy_iteration/: __init__.py  tce.py  tci.py
src/pyotc/: __init__.py  otc.py
src/pyotc/backend/graph/: utils.py
src/pyotc/backend/optimal_transport/: pot.py  scipy.py  utils.py
src/pyotc/backend/policy_iteration/: exact.py  tci.py  tci_pot.py
src/pyotc/dataloader/: __init__.py  dataloader.py
src/pyotc/examples/: edge_awareness.py  lollipops.py  stochastic_block_model.py  wheel.py
src/pyotc/otc/: __init__.py  entropic.py  exact.py
src/pyotc/otc_backend/graph/: __init__.py  utils.py
src/pyotc/otc_backend/optimal_transport/: logsinkhorn.py  native.py  native_refactor.py  pot.py  scipy.py
src/pyotc/otc_backend/policy_iteration/: approx_tce.py  entropic.py  entropic_tci.py  exact.py  exact_tce.py  exact_tci.py  exact_tci_lp.py  exact_tci_pot.py  tce.py  tci.py  tci_pot.py  tci_refactor.py  utils.py
src/pyotc/otc_backend/policy_iteration/dense/: approx_tce.py  entropic.py  entropic_tci.py  exact.py  exact_tce.py  exact_tci_pot.py
src/pyotc/otc_backend/policy_iteration/sparse/: exact.py  exact_tce.py  exact_tci.py
tests/: __init__.py  test_pyotc.py
tests/benchmark/: test_entropic.py  test_exact.py
tests/examples/: test_lollipops.py  test_stochastic_block_model.py  test_wheel.py
